getting-started/blueprint/kubernetes/kube-dcx.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dcx
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dcx
        tier: backend
    spec:
      containers:
      - name: dcx
        image: hub.kaaiot.io/kaaiot/dcx/dcx:latest
        terminationMessagePolicy: FallbackToLogsOnError
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: management
          initialDelaySeconds: 150
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: management
          initialDelaySeconds: 1
          periodSeconds: 1
        resources:
          requests:
            memory: 350Mi
          limits:
            memory: 1Gi
        ports:
        - name: management
          containerPort: 8080
        - name: jmx
          containerPort: 10500
        volumeMounts:
        - mountPath: /srv/kpc
          name: dcx-configs-volume
        - name: license-volume
          mountPath: /run/license
      imagePullSecrets:
      - name: kaaid
      volumes:
      - name: dcx-configs-volume
        configMap:
          name: dcx-configs
      - name: license-volume
        secret:
          secretName: kaa-license
          items:
          - key: file
            path: license.p12
