getting-started/blueprint/kubernetes/kube-epmx.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: epmx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: epmx
        tier: backend
    spec:
      containers:
      - name: epmx
        image: hub.kaaiot.io/kaaiot/epmx/epmx:latest
        terminationMessagePolicy: FallbackToLogsOnError
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: management
          initialDelaySeconds: 150
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: management
          initialDelaySeconds: 1
          periodSeconds: 1
        resources:
          requests:
            memory: 350Mi
          limits:
            memory: 1Gi
        ports:
        - name: management
          containerPort: 8080
        - name: jmx
          containerPort: 10500
        volumeMounts:
        - mountPath: /srv/epmx
          name: epmx-configs-volume
      volumes:
      - name: epmx-configs-volume
        configMap:
          name: epmx-configs
      imagePullSecrets:
      - name: kaaid
