getting-started/blueprint/kubernetes/kube-nats.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
    tier: message-broker
spec:
  type: "LoadBalancer"
  ports:
    # the port that this service should serve on
  - port: 4222
    targetPort: 4222
    nodePort: 30003
    protocol: TCP
    name: clients
  - port: 6222
    targetPort: 6222
    protocol: TCP
    name: http
  - port: 8222
    targetPort: 8222
    protocol: TCP
    name: routing
  selector:
    app: nats
    tier: message-broker
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nats
        tier: message-broker
    spec:
      containers:
      - name: nats
        image: nats:0.9.6
        args:
          - "--cluster=nats://0.0.0.0:6222"
          - "--routes=nats://nats:6222"
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          tcpSocket:
            port: clients-port
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: clients-port
          initialDelaySeconds: 1
          periodSeconds: 1
        resources:
          requests:
            memory: 100Mi
        ports:
        - name: clients-port
          containerPort: 4222
        - containerPort: 6222
        - containerPort: 8222
