getting-started/blueprint/kubernetes/kube-wd.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wd-service
  labels:
    app: wd-service
    tier: frontend
spec:
  type: "LoadBalancer"
  ports:
  - port: 30900
    targetPort: 30900
    nodePort: 30900
    name: wd
  selector:
    app: wd-service
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wd-service
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wd-service
        tier: frontend
    spec:
      imagePullSecrets:
        - name: kaaid
      containers:
      - name: wd-service
        image: hub.kaaiot.io/kaaiot/wd/wd:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healz
            port: 30900
          initialDelaySeconds: 120
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healz
            port: 30900
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            memory: 350Mi
          limits:
            memory: 1Gi
        ports:
        - name: wd-port
          containerPort: 30900
        volumeMounts:
        - mountPath: /srv/wd
          name: wd-configs-volume
      volumes:
      - name: wd-configs-volume
        configMap:
          name: wd-configs
